2020-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Roll minor version and date

2020-05-19  Dirk Schumacher  <mail@dirk-schumacher.net>

	* src/blake3.c: Add blake3 implementation
	* src/blake3.h: Idem
	* src/blake3_dispatch.c: Idem
	* src/blake3_impl.h: Idem
	* src/blake3_portable.c: Idem
	* src/digest.c: Support blake3 call
	* R/digest.R: Idem
	* inst/tinytest/test_blake3.R: Add tests
	* man/digest.Rd: Add documentation

2020-03-05  Harris McGehee  <mcgehee.harris@gmail.com>

	* man/sha1.Rd: Correct typo

2020-02-26  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add Debian badge

2020-02-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.25

2020-02-15  Kendon Bell  <bellk@landcareresearch.co.nz>

	* R/digest.R: Complete call to spookyhash

2020-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.24

2019-12-12  Thierry Onkelinx <thierry.onkelinx@inbo.be>

	* DESCRIPTION (Version, Date): Roll minor version
	* R/sha1.R: ignore the "srcref" attribute if set
	* inst/tinytest/test_new_matrix_behaviour.R: update unit test
	* inst/tinytest/test_sha1.R: update unit test
	* man/sha1.Rd: update documentation

2019-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/init.c: Do not register a .Call method for PMurHash

2019-12-05  Will Landau  <will.landau@gmail.com>

	* R/init.R (.onLoad): Cache nosharing state in base::serialize
	(.hasNoSharing): Return cached value
	* R/digest.R (digest): Use cached value accessor
	* R/vdigest.R (non_streaming_digest): Use cached value accessor

2019-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R (.onLoad): Cache isWindows state
	(.isWindows): Return cached value
	* R/digest.R (digest): Use cached value accessor

2019-11-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_new_matrix_behaviour.R: Split off tests affected